fixed image and content layout issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,11 +4,6 @@
     margin: 0;
 }
 
-main{
-    display: flex;
-    flex-wrap: wrap;
-}
-
 body {
     background-color: #d9dcd6;
 }
@@ -29,7 +24,7 @@ h1 .seo {
     color: #d9dcd6;
 }
 
-section {
+.header {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -56,6 +51,7 @@ p {
 }
 
 .hero {
+    object-fit: cover;
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -83,7 +79,7 @@ p {
     margin-right: 20px;
     padding: 20px;
     clear: both;
-    float: left;
+    float: right;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -106,7 +102,7 @@ h3 {
     max-width: 150px;
 } 
 
-.content{
+.content-row{
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -115,7 +111,7 @@ h3 {
     color: #ffffff;
 }
 
-.content img {
+.content-row img {
     max-height: 200px;
 }
 
